multiEdit panel z-index fix

--- a/app/react/App/scss/modules/_search.scss
+++ b/app/react/App/scss/modules/_search.scss
@@ -9,7 +9,7 @@
   }
 }
 
-.metadata-sidepanel {
+.metadata-sidepanel, .side-panel.multi-edit {
   z-index: 6;
 }
 
